tests/NormalTests/paczka2/big_fuzzy/86383653.err
Error in line 1: djYR4UX1G A12 90,2
Error in line 6: djYR4UX1G S409 46,9
Error in line 15: djYR4UX1G S994 47,2
Error in line 14: uPpD9ER A310 46,8
Error in line 18: djYR4UX1G A12 41,2
Error in line 20: A12 S409 72,5
Error in line 16: DA4S7h3Ucj A12 32,9
Error in line 45: uPpD9ER S994 21,5
Error in line 41: ZjBQ7z S409 89,2
Error in line 54: uPpD9ER A310 46,50
Error in line 51: BA9xoJfdqp6 S409 63,3
Error in line 61: ZjBQ7z S409 25,4
Error in line 62: 5SqfTE5q S994 158,6
Error in line 58: DA4S7h3Ucj A310 85,9
Error in line 42: A12 A12 27,5
Error in line 75: ZjBQ7z A12 44,66
Error in line 78: uPpD9ER S409 99,3
Error in line 63: ZjBQ7z A12 22,3
Error in line 86: 5SqfTE5q S994 39,5
Error in line 89: ZjBQ7z S409 -2,6
Error in line 96: BA9xoJfdqp6 S994 262,9
Error in line 104: ZjBQ7z A12 92,32
Error in line 93: 5SqfTE5q A12 72,9
Error in line 82: ZjBQ7z S409 68,2
Error in line 113: 5SqfTE5q S994 736
Error in line 118: DA4S7h3Ucj A310 73,5
Error in line 111: ZjBQ7z S994 83,9
Error in line 123: BA9xoJfdqp6 S994 89,3
Error in line 124: BA9xoJfdqp6 S409 94,3
Error in line 106: uPpD9ER A310 63,2
Error in line 119: DA4S7h3Ucj S409 60,5
Error in line 112: A12 S409 7,7
Error in line 147: 5SqfTE5q S409 81,7
Error in line 150: 5SqfTE5q S994 43,4
Error in line 152: DA4S7h3Ucj S409 47,8
Error in line 188: BA9xoJfdqp6 S409 19,56
Error in line 176: uPpD9ER A310 58,3
Error in line 194: DA4S7h3Ucj A310 61,4
Error in line 207: A12 A310 46,9
Error in line 192: BA9xoJfdqp6 S409 66,8
Error in line 208: ZjBQ7z A310 42,8
Error in line 215: ZjBQ7z A12 75,8
Error in line 223: DA4S7h3Ucj S994 13,2
Error in line 232: uPpD9ER S994 174,9
Error in line 229: A12 S994 63,1
Error in line 234: uPpD9ER A310 23,3
Error in line 240: 5SqfTE5q A310 44,5
Error in line 242: ZjBQ7z S409 39,4
Error in line 239: uPpD9ER S409 19,9
Error in line 244: 5SqfTE5q S994 66,2
Error in line 245: ZjBQ7z S994 61,0
